WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212432
Empty alt attribute does not ignore the image for accessibility clients in Safari.
https://bugs.webkit.org/show_bug.cgi?id=212432
Summary
Empty alt attribute does not ignore the image for accessibility clients in Sa...
Andres Gonzalez
Reported
2020-05-27 13:56:54 PDT
Empty alt attribute does not ignore the image for accessibility clients in Safari.
Attachments
Patch
(26.31 KB, patch)
2020-05-27 14:17 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-05-27 14:17:43 PDT
Created
attachment 400380
[details]
Patch
EWS
Comment 2
2020-05-27 16:41:25 PDT
Committed
r262224
: <
https://trac.webkit.org/changeset/262224
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400380
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-27 16:42:16 PDT
<
rdar://problem/63695916
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug