Source/WebCore/accessibility/AXLogger.h
@@ -36,8 +36,9 @@ public:
     AXLogger(const String& methodName);
     ~AXLogger();
     static void log(const String&);
-    static void log(const RefPtr<AXCoreObject>&);
+    static void log(RefPtr<AXCoreObject>);
     static void log(const std::pair<RefPtr<AXCoreObject>, AXObjectCache::AXNotification>&);
+    static void log(AccessibilityObjectInclusion);
 #if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
     static void log(AXIsolatedTree&);
 #endif
